--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_list.html
@@ -27,9 +27,12 @@
             <!-- <img src="{{ post.user_profile.profile_pic.url }}" width="500"> -->
         </div>
 
-        <span class="author-date">{{reply.author}} <span class="date">
+        <span class="post-header">
+            {{reply.author}}
+            <span class="date">
                 {{reply.post_date}}
-            </span> </span>
+            </span>
+        </span>
     </section>
 
     {% if replyingToIsReply %}
