--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_page.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/replies_page.html
@@ -25,7 +25,7 @@ Page3 - Add reply
                         <!-- <img src="{{ post.user_profile.profile_pic.url }}" width="500"> -->
                     </div>
 
-                    <span class="author-date">{{post.author}} <span class="date">
+                    <span class="post-header">{{post.author}} <span class="date">
                             {{post.post_date}}
                         </span> </span>
                 </section>
