--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -2,13 +2,15 @@
     margin: 0;
     box-sizing: border-box;
     padding: 0;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Lato', sans-serif;
 }
 
 :root {
-    --primary_color: #d3d170;
+    --primary_color: #d46ed4;
     --grey_color: rgba(217, 216, 216, 0.6);
-    --bg_color: #1f1f1f;
-    --post_bg_color: #181818;
+    --bg_color: #131212;
+    --post_bg_color: #131212;
 }
 
 
@@ -161,10 +163,12 @@ i:hover {
     left: 15%;
     bottom: 5px;
 }
-.navbar-contents .search-bar{
+
+.navbar-contents .search-bar {
     margin-left: auto;
 }
-.navbar-contents .search-bar input{
+
+.navbar-contents .search-bar input {
     padding: 8px;
     width: 300px;
 }
@@ -175,7 +179,8 @@ i:hover {
 .main-body {
 
     background-color: var(--bg_color);
-    min-height: 100vh;;
+    min-height: 100vh;
+    ;
     color: white;
     max-width: 100vw;
     text-align: center;
@@ -224,9 +229,16 @@ p::-webkit-scrollbar {
 
 .post .post-title {
     text-decoration: none;
-    font-size: x-large;
+    font-size: medium;
     color: white;
 }
+
+.post .post-tags {
+    text-decoration: none;
+    font-size: small;
+    color: #d46ed4;
+}
+
 
 .post-category-section {
     display: flex;
@@ -267,23 +279,56 @@ p::-webkit-scrollbar {
     margin-top: 10px;
 }
 
-.post-top-part .author-date {
+.post-top-part .post-header {
     display: flex;
     flex-direction: column;
-    font-size: larger;
+    font-size: medium;
 }
 
-.post-top-part .author-date .date {
+.post-top-part .post-header .date {
     font-size: small;
     color: var(--grey_color)
 }
 
 
+.post-top-part .post-options-button {
+    color: #d46ed4;
+    margin-left: auto;
+    display: flex;
+    cursor: pointer;
 
+}
 
+/* .post-top-part .post-options-button:hover>.post-options-list {
+    display: block;
+} */
 
+.post-options-list {
+    margin-left: auto;
+    position: relative;
+    display: none;
 
+}
 
+.post-options-list.show {
+    display: block;
+    cursor: pointer;
+}
+
+.post-options-list-items {
+    position: absolute;
+    left: -150px;
+}
+
+.blocker {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    /* background: rgba(0, 0, 0, .5); */
+}
 
 
 .page-contents {
@@ -347,13 +392,13 @@ h2::-webkit-scrollbar {
     display: none;
 }
 
-.gamer_profiles img{
+.gamer_profiles img {
     width: 100px;
     object-fit: cover;
 }
 
 
-button{
+button {
     background: none;
     border: none !important;
     color: white;
@@ -361,74 +406,83 @@ button{
 
 
 
-.matchmaking-main{
+.matchmaking-main {
     margin: 0 auto;
     margin-top: 40px;
     max-width: 900px;
     background-color: var(--post_bg_color);
-    
+
 }
-.matchmaking-main #matchmaking-form{
+
+.matchmaking-main #matchmaking-form {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#matchmaking-form select{
+#matchmaking-form select {
     background: #333;
     width: 150px;
     height: 30px;
     border-radius: 5px;
     color: white
-}   
-.matchmaking-item{
+}
+
+.matchmaking-item {
     margin: 10px;
 }
-.matchmaking-main button{
+
+.matchmaking-main button {
     background-color: #333;
     padding: 5px 15px;
     border-radius: 5px;
     border: #444 solid 1px;
     margin-top: 20px;
 }
-.gameprofile-wrapper{
+
+.gameprofile-wrapper {
     margin-top: 20px;
     display: flex;
 }
 
 
 /* User Posts Page */
-.user_page_profile_pic img{
+.user_page_profile_pic img {
     width: 250px;
     height: 250px;
     object-fit: cover;
     border-radius: 50%;
 }
-.logged_in_user{
+
+.logged_in_user {
     visibility: hidden;
 }
+
 /* User Posts Page */
 
 /* Search Results Page */
-.button-section{
+.button-section {
     margin-top: 40px;
 }
-.button-section button{
-    margin:0 20px;
+
+.button-section button {
+    margin: 0 20px;
     padding: 10px 20px;
     width: 140px;
     background-color: var(--post_bg_color);
     border: #444 solid 1px;
     border-radius: 5px;
 }
-#people-list .profile-pic{
+
+#people-list .profile-pic {
     display: flex;
     align-items: center;
 }
 
-#people-list .profile-pic .username{
+#people-list .profile-pic .username {
     padding: 10px;
 }
+
 /* Search Results Page */
 
 
