--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base.html
@@ -19,6 +19,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 
+
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <script src="https://unpkg.com/htmx.org@1.8.0"></script>
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,9 +35,10 @@
     </head>
 
     <body>
-        <div class="navbar ">
+        <!-- <div class="navbar ">
 
             <div class="navbar-contents">
+                <i class="fa-solid fa-bars"></i>
                 <a class="home" href="{% url 'home-page'%}">Home</i></a>
                 {% if user.is_authenticated %}
 
@@ -93,7 +97,7 @@
             </div>
 
             {%endif%}
-        </div>
+        </div> -->
 
         {% block content %}
 
