--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/posts_by_user.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/posts_by_user.html
@@ -7,8 +7,6 @@ Page3 Homepage
 
 <div class="main-body">
     <br />
-    
-    {% if posts %}
     <div class="page-contents">
         <div class="sidebar">
             <div class="logged_in_user">{{user.username}}</div>
@@ -17,8 +15,11 @@ Page3 Homepage
             <h1 class="user_name">{{profile_owner.username}}</h1>
             <div class="followers">Followers{{profile.followers.count}}</div>
             <div class="followers">Following{{profile.following.count}}</div>
-            <button class="follow_btn" >Follow</button>
-        </div>  
+            <button class="follow_btn">Follow</button>
+        </div>
+        {% if posts %}
+
+
         <div class="posts-timeline">
             <ul>
                 {% for post in posts %}
@@ -26,7 +27,8 @@ Page3 Homepage
                 <li class="post">
                     <div>
                         <div class="profile-pic">
-                            <a href="{%url 'posts-by-user' post.author%}"><img src="/media/{{profile.profile_pic}}" width="500"></a>
+                            <a href="{%url 'posts-by-user' post.author%}"><img src="/media/{{profile.profile_pic}}"
+                                    width="500"></a>
                         </div>
                         {{ post.title }} | {{ post.author }} | {{ post.post_date }} |
                         <a href="{% url 'posts-by-category' post.category %}">{{ post.category }}</a>
@@ -38,9 +40,8 @@ Page3 Homepage
                         {% endif %}
                         {% endif %}
                         <hr>
-                        <a class="post-title" onclick="storeScroll()"
-                                            href="{% url 'upload_reply' post.pk %}">
-                                            {{post.body|safe}}</a>
+                        <a class="post-title" onclick="storeScroll()" href="{% url 'upload_reply' post.pk %}">
+                            {{post.body|safe}}</a>
                         {% if post.image1 %}
                         <img src="{{ post.image1.url}}" width="500">
                         {% endif %}
@@ -62,28 +63,28 @@ Page3 Homepage
 
                 {% endfor %}
             </ul>
-        </div> 
-    </div> 
+        </div>
+    </div>
     {% else %}
     <h2>Sorry, no posts found for category <i>{{ cat }}</i></h2>
     {% endif %}
 </div>
 <script>
-    $(document).ready(function(){
+    $(document).ready(function () {
 
-        $('.follow_btn').click(function(){
+        $('.follow_btn').click(function () {
             $.ajax({
-                type:'POST',
+                type: 'POST',
                 url: `/start_following/${$('.user_name').text()}`,
-                data:{
+                data: {
                     'user': $('.logged_in_user').text(),
                     // csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
                     'csrfmiddlewaretoken': '{{ csrf_token }}',
                 },
-                success:function(response){
+                success: function (response) {
 
                 },
-                error: function(response){
+                error: function (response) {
                     //alert("Error getting ranks and servers")
                 }
             })
