--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/sidebar-left.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/sidebar-left.html
@@ -1,37 +1,47 @@
+{% load static %}
 <div class="sidebar-left" id="sidebar-left">
 
     <div class="sidebar-top-section">
 
         <div>
-            PostIT
+            <img src="{% static 'PostIT/images/PostIT.png' %}" width="100">
         </div>
     </div>
     <div class="sidebar-middle-section">
         <div class="sidebar-list">
+            <hr />
+            <br />
             <ul>
-                <li class="sidebar-list-item">
-                    <div>Icon </div>
-                    <div>Profile</div>
-                </li>
-                <li class="sidebar-list-item">Topics</li>
-                <li class="sidebar-list-item">Bookmarks</li>
-                <li class="sidebar-list-item">Matchmaking</li>
+                <li class="sidebar-list-item"> <i class="fa-solid fa-hashtag"></i>Explore</li>
+                <li class="sidebar-list-item"><i class="fa-solid fa-bookmark"></i>Bookmarks</li>
+                <li class="sidebar-list-item"><i class="fa-solid fa-magnifying-glass"></i></i>Discover</li>
+                <li class="sidebar-list-item"><i class="fa-solid fa-newspaper"></i></i></i>Latest News</li>
+                <li class="sidebar-list-item"><i class="fa-solid fa-users-viewfinder"></i>Matchmaking</li>
             </ul>
         </div>
-    </div>
 
+    </div>
+    <div></div>
     <div class="bottom-sidebar">
-        {% if user.profile.profile_pic.name %}
+        <hr />
+        {% if user.profile %}
         <div class="sidebar-profile-section">
 
             <div class="sidebar-profile-pic">
-                <img src="{{ user.profile.profile_pic.url}}" width="200">
+                <a href="{%url 'posts-by-user' user %}">
+                    {% if user.profile.profile_pic.name %}
+                    <img src="{{ user.profile.profile_pic.url}}" width="200"></a>
+                {% else %}
+                <img src="{% static 'PostIT/images/profilepic.jpg' %}" width="200">
+                {% endif %}
+
             </div>
 
             <div class="sidebar-profile-name">
                 {{user.username}}<br />
                 <div class="sidebar-view-profile-button">
-                    View Profile
+                    <a href="{%url 'posts-by-user' user %}">View Profile</a>
+
                 </div>
             </div>
             <div class="blocker-page" id="blocker-page"></div>
