--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/sidebar-left.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/sidebar-left.html
@@ -47,9 +47,9 @@
             <div class="blocker-page" id="blocker-page"></div>
             <div class="sidebar-profile-settings-options" id="sidebar-profile-settings-options">
                 <ul>
-                    <li>Edit Profile</li>
-                    <li>Create new Profile</li>
-                    <li>Logout</li>
+                    <li class="sidebar-profile-settings-option">Edit Profile</li>
+                    <li class="sidebar-profile-settings-option">Create new Profile</li>
+                    <li class="sidebar-profile-settings-option">Logout</li>
                 </ul>
             </div>
             <div class="sidebar-profile-settings-button" onclick="navbarProfileSettingsToggle()">
